2005-04-13  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/app_procs.c: register handler for the "GimpPaint" log domain.

2005-04-10  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.2.7, interface_age 7.

2005-04-10  Sven Neumann  <sven@gimp.org>

	* Made 2.2.6 release.

2005-04-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: reverted the previous change, it was wrong
	(see bug #169909).

2005-04-10  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.2.6, interface_age 6.

2005-04-09  Sven Neumann  <sven@gimp.org>

	* Made 2.2.5 release.

2005-04-09  Sven Neumann  <sven@gimp.org>

	* menus/Makefile.am
	* tips/Makefile.am: changed the validate rules to work with srcdir
	!= builddir.

2005-04-09  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/print/print.c: quote the shell command passed to execl().
	Fixes bug #169909.

2005-04-09  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimp-tools.c (gimp_tools_register): manually hardwire
	the global font and the text option's font together. Makes the
	globally selected font persistant and fixes bug #171024.

2005-04-09  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c: merged changes to the time-smoother code
	from the HEAD branch. Fixes bug #164272.

2005-04-09  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/gifload.c (GetCode): GetDataBlock returns -1 on
	error, so count should be an int, not an unsigned char. Fixes
	bug #173119.

2005-04-09  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/winicon/icosave.c: implement color counting without
	changing the image-type to RGB. A save plug-in must not change the
	image.

2005-04-08  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/winicon/icodialog.c: rewrote preview code to use
	GtkImage and pixbufs. The previous implementation was severily
	broken.

2005-04-08  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:
