@@ -1,3 +1,11 @@
+2005-04-14  Sven Neumann  <sven@gimp.org>
+
+	Merged from HEAD branch:
+
+	* libgimp/gimpdrawable.[ch] (gimp_drawable_get_tile)
+	(gimp_drawable_get_tile2): cleanup gint/gboolean confusion (spotted
+	by Maurits Rijk).
+
 2005-04-13  Sven Neumann  <sven@gimp.org>
 
 	Merged from HEAD branch:
